--- a/public/mobile/index.html
+++ b/public/mobile/index.html
@@ -117,6 +117,18 @@
                 &copy; 2010, BohConf is organized by <img id="sls-logo" src="/mobile/sls-logo-16.png" alt="SmartLogic"/>
             </div>
         </div>
+        <div id="about-bohconf">
+            <div class="toolbar">
+                <h1>About BohConf</h1>
+                <a class="back" href="#">Home</a>
+            </div>
+            <div class="description">
+              <p>BohConf is the official <a href="http://en.oreilly.com/rails2010" target="_blank">RailsConf 2010</a> unconference. At BohConf, we're going to get our hands dirty writing code and sharing ideas in an open and free-form environment. This hacking-centric event will include community code drives featuring well known OSS authors, a code retreat, a programming competition, and barcamp-style discussions. It is <strong>free</strong> and will run alongside RailsConf in the convention center. <strong>Anyone is welcome</strong> at BohConf.</p>
+            </div>
+            <div class="footer">
+                &copy; 2010, BohConf is organized by <img id="sls-logo" src="/mobile/sls-logo-16.png" alt="SmartLogic"/>
+            </div>
+        </div>
         <div id="when-where">
             <div class="toolbar">
                 <h1>When and Where</h1>
@@ -136,31 +148,17 @@
             </div>
             <div class="description">
               <div class="sessions">
-                <h3>Community Code Drive</h3>
-                <p>
-                    The Community Code Drive is a place to meet and work with the authors of many popular open source projects. Come to help hack on code, find and fix bugs, or just watch a seasoned developer at work. Featuring: X from project Y, A from project B, and M from project N.
-                </p>
-                	<h3>Code Retreat</h3>
-                    <p>Code. Rinse. Repeat. As professional developers we're often coding for profit and rarely coding for practice. In a Code Retreat we'll sharpen our coding skills with a set of exercises done in pairs, and we'll start fresh every time.</p>
-                	<h3>Barcamp</h3>
-                    <p>A Barcamp is a "user generated conference", so there's structure without an agenda. Bring your own questions and your own answers, and we'll hold our own BohCamp.</p>
-                	<h3>Programming Contest</h3>
-                    <p>Come flex your coding muscles with a data visualization challenge! We'll unveil a dataset and give participants 24 hours to do whatever they want with it. It doesn't have to be rails (or even a website) but it does have to be cool! Prizes will include (TBD: conference tickets, beer, swag, a certificate of merit, gift certificates, etc)</p>
-                	<h3>Ruby and Art</h3>
-                    <p>Do you like ruby? Do you like art? Do you like taking two things that you like, and then sticking them together to make a bigger thing you like even more? We'll be experimenting with visual art, music, games, and of course, Ruby!</p>
+                  <h3>Community Code Drive</h3>
+                  <p>The Community Code Drive is a place to meet and work with the authors of many popular open source projects. Come to help hack on code, find and fix bugs, or just watch a seasoned developer at work. Featured OSS authors will be announced soon!</p>
+                  <h3>Code Retreat</h3>
+                  <p>Code. Rinse. Repeat. As professional developers we're often coding for profit and rarely coding for practice. In a Code Retreat we'll sharpen our coding skills with a set of exercises done in pairs, and we'll start fresh every time.</p>
+                  <h3>Programming Contest</h3>
+                  <p>Come flex your coding muscles with a data visualization challenge! We'll unveil a dataset and give participants 24 hours to do whatever they want with it. It doesn't have to be rails (or even a website) but it does have to be cool! Prizes will include (TBD: conference tickets, beer, swag, a certificate of merit, gift certificates, etc)</p>
+                  <h3>Ruby and Art</h3>
+                  <p>Do you like ruby? Do you like art? Do you like taking two things that you like, and then sticking them together to make a bigger thing you like even more? We'll be experimenting with visual art, music, games, and of course, Ruby!</p>
+                  <h3>Barcamp</h3>
+                  <p>A Barcamp is a "user generated conference", so there's structure without an agenda. Bring your own questions and your own answers, and we'll hold our own BohCamp.</p>
               </div>
-            </div>
-            <div class="footer">
-                &copy; 2010, BohConf is organized by <img id="sls-logo" src="/mobile/sls-logo-16.png" alt="SmartLogic"/>
-            </div>
-        </div>
-        <div id="about-bohconf">
-            <div class="toolbar">
-                <h1>About BohConf</h1>
-                <a class="back" href="#">Home</a>
-            </div>
-            <div class="description">
-              <p>BohConf is <a href="http://en.oreilly.com/rails2010" target="_blank">RailsConf 2010</a>'s <a href="http://en.wikipedia.org/wiki/Unconference">Unconference</a>. It's not an anti-conf, it's an extension of what RailsConf can be. At BohConf, we're going to get our hands dirty writing code and sharing ideas in an open and free-form environment. <strong>Anyone is welcome</strong> at BohConf, and there is no registration fee (although free registration is required for security). </p>
             </div>
             <div class="footer">
                 &copy; 2010, BohConf is organized by <img id="sls-logo" src="/mobile/sls-logo-16.png" alt="SmartLogic"/>
