--- a/public/mobile/index.html
+++ b/public/mobile/index.html
@@ -2,22 +2,23 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>BohConf Mobile</title>
+        <title>BohConf</title>
         <style type="text/css" media="screen">@import "mobile/jqtouch/jqtouch.min.css";</style>
         <style type="text/css" media="screen">@import "mobile/themes/jqt/theme.min.css";</style>
         <script src="mobile/jqtouch/jquery.1.3.2.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="mobile/jqtouch/jqtouch.min.js" type="application/x-javascript" charset="utf-8"></script>
         <script type="text/javascript" charset="utf-8">
             var jQT = new $.jQTouch({
-                icon: '/mobile/bohconf-homescreen.png',
-                addGlossToIcon: false,
+                icon: '/mobile/bohconf-icon.png',
                 statusBar: 'black',
 
                 preloadImages: [
                     'mobile/themes/jqt/img/button.png',
                     'mobile/themes/jqt/img/back_button.png',
+                    'mobile/themes/jqt/img/back_button_clicked.png',
                     'mobile/themes/jqt/img/toolbar.png',
-                    'mobile/themes/jqt/img/chevron.png'
+                    'mobile/themes/jqt/img/chevron.png',
+                    'mobile/sls-logo-16.png'
                 ]
             });
             // Some sample Javascript functions:
@@ -68,8 +69,13 @@
               vertical-align: middle;
             }
             .sessions h3 {
-              color: #9999FF;
-              text-shadow: rgba(0,0,0,0.19921);
+              color: #FFF;
+              text-shadow: rgba(0,0,0,0.19921) 0 1px 1px;
+              text-align: center;
+              padding: 3px 0 5px;
+              background: -webkit-gradient(linear, 0% 0, 0% 100%, from(#4C4D4E), to(#404142));
+              border-top: 1px solid #333;
+              -webkit-box-shadow: rgba(0, 0, 0, 0.296875) 1px 1px 3px;
             }
         </style>
     </head>
