added bmore on rails and stay with a local

--- a/public/mobile/index.html
+++ b/public/mobile/index.html
@@ -92,6 +92,8 @@
             <ul class="rounded">
               <li class="arrow"><a href="http://www.twitter.com/bohconf" target="_blank">Twitter</a></li>
               <li class="arrow"><a href="http://www.facebook.com/pages/BohConf/116340228389322" target="_blank">Facebook</a></li>
+              <li class="arrow"><a href="http://bmoreonrails.org/" target="_blank">Bmore on Rails</a></li>
+              <li class="arrow"><a href="http://bmoreonrails.org/stay-with-a-local/" target="_blank">Stay with a Local</a></li>
             </ul>
             <div class="footer">
                 &copy; 2010, BohConf is organized by <img id="sls-logo" src="/mobile/sls-logo-16.png" alt="SmartLogic"/>
