--- a/public/index.html
+++ b/public/index.html
@@ -91,9 +91,22 @@
         <a href="http://www.smartlogicsolutions.com" target="_blank">
         	<img id="smartlogic" src="sls-logo-25.png" alt="SmartLogic Solutions" />   
         </a></p> 
+        <p id="mobile-toggle">
+          <a href="/m">Mobile</a>
+        </p>  
     
     </div>
     
 </div> 
+<script type="text/javascript">
+  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+  try {
+    var pageTracker = _gat._getTracker("UA-466947-9");
+    pageTracker._trackPageview();
+    } catch(err) {}
+</script>
 </body>
 </html>
