--- a/public/mobile/index.html
+++ b/public/mobile/index.html
@@ -95,6 +95,9 @@
               <li class="arrow"><a href="http://bmoreonrails.org/" target="_blank">Bmore on Rails</a></li>
               <li class="arrow"><a href="http://bmoreonrails.org/stay-with-a-local/" target="_blank">Stay with a Local</a></li>
             </ul>
+            <ul class="rounded">
+              <li class="arrow"><a href="/force_desktop" target="_webapp">View Full Site</a></li>
+            </ul>
             <div class="footer">
                 &copy; 2010, BohConf is organized by <img id="sls-logo" src="/mobile/sls-logo-16.png" alt="SmartLogic"/>
             </div>
