Add "What is Boh?" section

--- a/public/mobile/index.html
+++ b/public/mobile/index.html
@@ -87,6 +87,7 @@
             <ul class="rounded">
               <li class="arrow"><a href="#about-bohconf">About BohConf</a></li>
               <li class="arrow"><a href="#when-where">When and Where</a></li>
+              <li class="arrow"><a href="#what-is-boh">What is Boh?</a></li>
               <li class="arrow"><a href="#sessions">Sessions</a></li>
             </ul>
             <ul class="rounded">
@@ -125,6 +126,18 @@
             <div class="footer">
                 &copy; 2010, BohConf is organized by <img id="sls-logo" src="/mobile/sls-logo-16.png" alt="SmartLogic"/>
             </div>
+        </div>
+        <div id="what-is-boh">
+          <div class="toolbar">
+              <h1>When and Where</h1>
+              <a class="back" href="#">Home</a>
+          </div>
+          <div class="description">
+            <p>The name BohConf is an homage to the Baltimore institution <a href="http://nationalbohemian.com/" target="_blank">National Bohemian</a> (or Natty Boh).  Every town has their local light beer of choice, and ours is Natty Boh.  Make sure to grab one (or several) when you're in town.</p>
+          </div>
+          <div class="footer">
+              &copy; 2010, BohConf is organized by <img id="sls-logo" src="/mobile/sls-logo-16.png" alt="SmartLogic"/>
+          </div>          
         </div>
         <div id="sessions">
             <div class="toolbar">
