added link to wiki

--- a/public/mobile/index.html
+++ b/public/mobile/index.html
@@ -110,6 +110,7 @@
             </div>
             <div class="description">
               <p>BohConf is the official <a href="http://en.oreilly.com/rails2010" target="_blank">RailsConf 2010</a> unconference. At BohConf, we're going to get our hands dirty writing code and sharing ideas in an open and free-form environment. This hacking-centric event will include community code drives featuring well known OSS authors, a code retreat, a programming competition, and barcamp-style discussions. It is <strong>free</strong> and will run alongside RailsConf in the convention center. <strong>Anyone is welcome</strong> at BohConf.</p>
+              <p>You can track updates and developments by following us on <a href="http://twitter.com/bohconf">Twitter</a> and by contributing to <a href="http://wiki.github.com/smartlogic/BohConf/">the BohConf wiki</a>. Your input will shape this event.</p>
             </div>
             <div class="footer">
                 &copy; 2010, BohConf is organized by <img id="sls-logo" src="/mobile/sls-logo-16.png" alt="SmartLogic"/>
