--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
         <p class="back_to_top" href="#">Back to top</p>
 
         <p>BohConf is the official <a href="http://en.oreilly.com/rails2010" target="_blank">RailsConf 2010</a> unconference. At BohConf, we're going to get our hands dirty writing code and sharing ideas in an open and free-form environment. This hacking-centric event will include community code drives featuring well known OSS authors, a code retreat, a programming competition, and barcamp-style discussions. It is <strong>free</strong> and will run alongside RailsConf in the convention center. <strong>Anyone is welcome</strong> at BohConf.</p>
+        <p class='trailing'>You can track updates and developments by following us on <a href="http://twitter.com/bohconf">Twitter</a> and by contributing to <a href="http://wiki.github.com/smartlogic/BohConf/">the BohConf wiki</a>. Your input will shape this event.</p>
 
         <h2 id="when_where_h2">When &amp; Where</h2>
 
