Link to Ignite RailsConf, center Boh images, fix autoscroll

--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
             <input type="submit" id="submit_button" value="Submit" />
           </form>
         </div>
-        <iframe src="#" id="fake-target" name="fake-target" style="width:0px; height:0px; border:0px;"></iframe>
+        <iframe id="fake-target" name="fake-target" style="width:0px; height:0px; border:0px;"></iframe>
 
         <div id="about_text_container">
           <p>BohConf is the official <a href="http://en.oreilly.com/rails2010"
@@ -150,23 +150,25 @@
       <p class="back_to_top" href="#">Back to top</p>
 
       <div id="icon_container">
+        <a href="http://www.twitter.com/bohconf" target="_blank">
+          <img class="media_icons" src="/images/twitter.png" alt="Twitter" />
+        </a>
 
-      <a href="http://www.twitter.com/bohconf" target="_blank">
-        <img class="media_icons" src="/images/twitter.png" alt="Twitter" />
-      </a>
+        <a href="http://www.facebook.com/bohconf" target="_blank">
+          <img class="media_icons" src="/images/facebook.png" alt="Facebook" />
+        </a>
 
-      <a href="http://www.facebook.com/bohconf" target="_blank">
-        <img class="media_icons" src="/images/facebook.png" alt="Facebook" />
-       </a>
+        <a href="http://bmoreonrails.org/" target="_blank">
+          <img class="media_icons" src="/images/bmore_on_rails.png" alt="BMore on Rails" />
+        </a>
 
-      <a href="http://bmoreonrails.org/" target="_blank">
-        <img class="media_icons" src="/images/bmore_on_rails.png" alt="BMore on Rails" />
-       </a>
+        <a href="http://bmoreonrails.org/stay-with-a-local/" target="_blank">
+          <img class="media_icons" src="/images/stay_with_a_local.png" alt="Stay with a Local" />
+        </a>
 
-      <a href="http://bmoreonrails.org/stay-with-a-local/" target="_blank">
-        <img class="media_icons" src="/images/stay_with_a_local.png" alt="Stay with a Local" />
-       </a>
-
+        <a href="http://igniterailsconf.com" target="_blank">
+          <img class="media_icons" src="/images/ignite_railsconf.jpg" alt="Ignite RailsConf" />
+        </a>
       </div>
 
     <hr />
