--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>BohConf</title>
+<meta name="keywords" contents="Ruby on Rails, RoR, RailsConf, unconf, barcamp, unconference, SmartLogic, Baltimore, Community Code Drive, B'more on Rails, Ignite RailsConf, Stay with a Local" />
+<title>BohConf | The Official Unconf of RailsConf 2010</title>
 
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -25,57 +26,58 @@
 
   <div id="content">
 
-    <h1>BohConf, The Conf of Pleasant Coding</h1>
+    <h1>BohConf, The Official Unconf of RailsConf 2010</h1>
 
-        <div id="tab_container">
-          <a id="social_media_link" href="#">Social Media</a>
-          <a id="sessions_link" href="#">Sessions</a>
-          <a id="what_is_boh_link" href="#">What is Boh?</a>
-          <a id="when_where_link" href="#">When &amp; Where</a>
-          <a id="about_link" href="#">About</a>
-        </div>
+    <div id="tab_container">
+      <a id="social_media_link" href="#">Social Media</a>
+      <a id="sessions_link" href="#">Sessions</a>
+      <a id="what_is_boh_link" href="#">What is Boh?</a>
+      <a id="when_where_link" href="#">When &amp; Where</a>
+      <a id="about_link" href="#">About</a>
+    </div>
 
-      <h2 id="about_h2">About BohConf</h2><p class="back_to_top" href="#">Back to top</p>
+    <h2 id="about_h2">About BohConf</h2>
+    <p class="back_to_top" href="#">Back to top</p>
 
-      <div id="about_container">
-        <script type="text/javascript">
-          function custommsg() {
-            /*
-            document.getElementById("form-message").style.display="";
-            document.getElementById("form-message").innerHTML='<p style="font-size: 24px;">Thanks!</p>';
-            document.getElementById("form-container").style.display="none";
-            */
-            document.getElementById("submit_button").value = "Thanks!";
-            document.getElementById("submit_button").disabled = "disabled";
-            document.getElementById("submit_button").style.color = "#BDD472";
-            document.getElementById("submit_button").style.cursor = "auto";
+    <div id="about_container">
+      <script type="text/javascript">
+        function custommsg() {
+          /*
+          document.getElementById("form-message").style.display="";
+          document.getElementById("form-message").innerHTML='<p style="font-size: 24px;">Thanks!</p>';
+          document.getElementById("form-container").style.display="none";
+          */
+          document.getElementById("submit_button").value = "Thanks!";
+          document.getElementById("submit_button").disabled = "disabled";
+          document.getElementById("submit_button").style.color = "#BDD472";
+          document.getElementById("submit_button").style.cursor = "auto";
 
+        }
+        function clearField1() {
+          var textfield = document.getElementById("text_field1");
+          if (textfield.value == "Enter your name") {
+            textfield.value = "";
           }
-          function clearField1() {
-            var textfield = document.getElementById("text_field1");
-            if (textfield.value == "Enter your name") {
-              textfield.value = "";
-            }
+        }
+        function resetField1() {
+          var textfield = document.getElementById("text_field1");
+          if (textfield.value == "") {
+            textfield.value = "Enter your name";
           }
-          function resetField1() {
-            var textfield = document.getElementById("text_field1");
-            if (textfield.value == "") {
-              textfield.value = "Enter your name";
-            }
+        }
+        function clearField2() {
+          var textfield = document.getElementById("text_field2");
+          if (textfield.value == "Enter your email address") {
+            textfield.value = "";
           }
-          function clearField2() {
-            var textfield = document.getElementById("text_field2");
-            if (textfield.value == "Enter your email address") {
-              textfield.value = "";
-            }
+        }
+        function resetField2() {
+          var textfield = document.getElementById("text_field2");
+          if (textfield.value == "") {
+            textfield.value = "Enter your email address";
           }
-          function resetField2() {
-            var textfield = document.getElementById("text_field2");
-            if (textfield.value == "") {
-              textfield.value = "Enter your email address";
-            }
-          }
-        </script>
+        }
+      </script>
 
         <div style="display: none;" id="form-message"></div>
         <div id="form-container">
@@ -89,8 +91,8 @@
         <iframe id="fake-target" name="fake-target" style="width:0px; height:0px; border:0px;"></iframe>
 
         <div id="about_text_container">
-          <p>BohConf is the official <a href="http://en.oreilly.com/rails2010"
-            target="_blank">RailsConf 2010</a> unconference. At BohConf, we're
+          <p><strong>BohConf is the official <a href="http://en.oreilly.com/rails2010"
+            target="_blank">RailsConf 2010</a> unconf</strong>. At BohConf, we're
           going to get our hands dirty writing code and sharing ideas in an
           open and free-form environment. This hacking-centric event will
           include community code drives featuring well known OSS authors, a
@@ -151,23 +153,23 @@
 
       <div id="icon_container">
         <a href="http://www.twitter.com/bohconf" target="_blank">
-          <img class="media_icons" src="/images/twitter.png" alt="Twitter" />
+          <img class="media_icons" src="/images/twitter.png" alt="@bohconf on Twitter" title="@bohconf on Twitter" />
         </a>
 
         <a href="http://www.facebook.com/bohconf" target="_blank">
-          <img class="media_icons" src="/images/facebook.png" alt="Facebook" />
+          <img class="media_icons" src="/images/facebook.png" alt="BohConf on Facebook" title="BohConf on Facebook" />
         </a>
 
         <a href="http://bmoreonrails.org/" target="_blank">
-          <img class="media_icons" src="/images/bmore_on_rails.png" alt="BMore on Rails" />
+          <img class="media_icons" src="/images/bmore_on_rails.png" alt="B'more on Rails, Baltimore's Ruby Users Group" title="B'more on Rails, Baltimore's Ruby Users Group" />
         </a>
 
         <a href="http://bmoreonrails.org/stay-with-a-local/" target="_blank">
-          <img class="media_icons" src="/images/stay_with_a_local.png" alt="Stay with a Local" />
+          <img class="media_icons" src="/images/stay_with_a_local.png" alt="Stay with a Local created by B'more on Rails" title="Stay with a Local created by B'more on Rails" />
         </a>
 
         <a href="http://igniterailsconf.com" target="_blank">
-          <img class="media_icons" src="/images/ignite_railsconf.jpg" alt="Ignite RailsConf" />
+          <img class="media_icons" src="/images/ignite_railsconf.jpg" alt="Ignite RailsConf" title="Ignite RailsConf" />
         </a>
       </div>
 
@@ -175,7 +177,7 @@
 
         <p id="copyright">&copy; 2010, BohConf is organized by
         <a href="http://www.smartlogicsolutions.com" target="_blank">
-          <img id="smartlogic" src="/images/sls-logo-25.png" alt="SmartLogic Solutions" />
+          <img id="smartlogic" src="/images/sls-logo-25.png" alt="SmartLogic Solutions, Baltimore's premier Ruby on Rails consultancy" title="SmartLogic Solutions, Baltimore's premier Ruby on Rails consultancy" />
         </a></p>
         <p id="mobile-toggle">
           <a href="/m">Mobile</a>
