--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta name="keywords" contents="Ruby on Rails, RoR, RailsConf, unconf, barcamp, unconference, SmartLogic, Baltimore, Community Code Drive, B'more on Rails, Ignite RailsConf, Stay with a Local" />
+<meta name="keywords" contents="Ruby on Rails, RoR, RailsConf, unconf, barcamp, unconference, SmartLogic, Baltimore, Community Code Drive, B'more on Rails, Ignite RailsConf, Stay with a Local, Code Retreat, Programming Contest, Ruby and Art" />
 <title>BohConf | The Official Unconf of RailsConf 2010</title>
 
 <link rel="icon" href="favicon.ico" type="image/x-icon">
