--- a/public/mobile/index.html
+++ b/public/mobile/index.html
@@ -148,7 +148,7 @@
             <div class="description">
               <div class="sessions">
                   <h3>Community Code Drive</h3>
-                  <p>The Community Code Drive is a place to meet and work with the authors of many popular open source projects. Come to help hack on code, find and fix bugs, or just watch a seasoned developer at work. Featured OSS authors will be announced soon!</p>
+                  <p>The Community Code Drive is a place to meet and work with the authors of many popular open source projects. Come to help hack on code, find and fix bugs, or just watch a seasoned developer at work. <strong>Check out the <a href="http://wiki.github.com/smartlogic/BohConf/community-code-drive">schedule</a> to see which OSS authors are participating (and feel free to add yourself)!</strong></p>
                   <h3>Code Retreat</h3>
                   <p>Code. Rinse. Repeat. As professional developers we're often coding for profit and rarely coding for practice. In a Code Retreat we'll sharpen our coding skills with a set of exercises done in pairs, and we'll start fresh every time.</p>
                   <h3>Programming Contest</h3>
