--- a/public/mobile/index.html
+++ b/public/mobile/index.html
@@ -152,7 +152,7 @@
                   <h3>Code Retreat</h3>
                   <p>Code. Rinse. Repeat. As professional developers we're often coding for profit and rarely coding for practice. In a Code Retreat we'll sharpen our coding skills with a set of exercises done in pairs, and we'll start fresh every time.</p>
                   <h3>Programming Contest</h3>
-                  <p>Come flex your coding muscles with a data visualization challenge! We'll unveil a dataset and give participants 24 hours to do whatever they want with it. It doesn't have to be rails (or even a website) but it does have to be cool! Prizes will include a $100 gift card, an assortment of O'Reilley books, and BohConf T-Shirts.</p>
+                  <p>Come flex your coding muscles with a data visualization challenge! We'll unveil a dataset and give participants 24 hours to do whatever they want with it. It doesn't have to be rails (or even a website) but it does have to be cool! Prizes will include a $100 gift card, an assortment of O'Reilly books, and BohConf T-Shirts.</p>
                   <h3>Ruby and Art</h3>
                   <p>Do you like ruby? Do you like art? Do you like taking two things that you like, and then sticking them together to make a bigger thing you like even more? We'll be experimenting with visual art, music, games, and of course, Ruby!</p>
                   <h3>Barcamp</h3>
