--- a/public/index.html
+++ b/public/index.html
@@ -115,6 +115,8 @@
 
       <p>BohConf will be held at the <a href="http://www.bccenter.org" target="_blank">Baltimore Convention Center</a>, June 7 - 9, 2010.</p>
 
+      <p><strong>CURRENT SESSION:</strong> <a href="http://wiki.github.com/smartlogic/BohConf/code-retreat">http://wiki.github.com/smartlogic/BohConf/code-retreat</a>  </p>
+
       <h2 id="what_is_boh_h2">What is Boh?</h2> <p class="back_to_top" href="#">Back to top</p>
 
       <p>The name BohConf is an homage to the Baltimore institution <a href="http://nationalbohemian.com/" target="_blank">National Bohemian</a> (or Natty Boh).  Every town has their local light beer of choice, and ours is Natty Boh.  Make sure to grab one (or several) when you're in town.</p>
