--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,16 @@
       <a id="about_link" href="#">About</a>
     </div>
 
+    <h2 id="upcoming_h2">NEWS!</h2>
+    <p class="back_to_top" href="#">Back to top</p>
+    <div id="upcoming_container">
+      <a href="http://twitter.com/railsconf/status/27049733980"><img src="/images/railsconf-tweet.png" /></a>
+      <div id="upcoming_text_container">
+        <p>It's official! RailsConf will return to Baltimore in 2011. We're not sure what this means for BohConf yet,
+        but regardless, we're excited.</p>
+      </div>
+    </div>
+
     <h2 id="about_h2">About BohConf</h2>
     <p class="back_to_top" href="#">Back to top</p>
 
@@ -51,7 +61,6 @@
           document.getElementById("submit_button").disabled = "disabled";
           document.getElementById("submit_button").style.color = "#BDD472";
           document.getElementById("submit_button").style.cursor = "auto";
-
         }
         function clearField1() {
           var textfield = document.getElementById("text_field1");
@@ -78,7 +87,6 @@
           }
         }
       </script>
-
         <div style="display: none;" id="form-message"></div>
         <div id="form-container">
           <form action="" method="POST" target="fake-target" onsubmit="this.action='http://spreadsheets.google.com/formResponse?formkey=dE1oZnlsb1JQRkhpQk1nZkR5R3k0LWc6MQ'; custommsg(); return true;">
@@ -91,29 +99,29 @@
         <iframe id="fake-target" name="fake-target" style="width:0px; height:0px; border:0px;"></iframe>
 
         <div id="about_text_container">
-          <p><strong>BohConf is the official <a href="http://en.oreilly.com/rails2010"
-            target="_blank">RailsConf 2010</a> unconf</strong>. At BohConf, we're
-          going to get our hands dirty writing code and sharing ideas in an
-          open and free-form environment. This hacking-centric event will
-          include community code drives featuring well known OSS authors, a
-          code retreat, a programming competition, and barcamp-style
-          discussions. It is <strong>free</strong> and will run alongside
-          RailsConf in the convention center. <strong>Everyone is
-            welcome</strong> at BohConf. Registration is free and can be
+          <p><strong>BohConf is the official
+          <a href="http://en.oreilly.com/rails2010" target="_blank">RailsConf 2010</a> unconference</strong>.
+          At BohConf, we're going to get our hands dirty writing code and
+          sharing ideas in an open and free-form environment. This
+          hacking-centric event will include community code drives featuring
+          well known OSS authors, a code retreat, a programming competition,
+          and barcamp-style discussions. It is <strong>free</strong> and will
+          run alongside RailsConf in the convention center. <strong>Everyone is
+          welcome</strong> at BohConf. Registration is free and can be
           completed at <a href="https://en.oreilly.com/rails2010/public/register">https://en.oreilly.com/rails2010/public/register</a></p>
 
           <p class='trailing'>You can track updates and developments by
           following us on <a href="http://twitter.com/bohconf">Twitter</a> and
           by contributing to <a
-            href="http://wiki.github.com/smartlogic/BohConf/">the BohConf
-            wiki</a>. Your input will shape this event.</p>
+            href="http://wiki.github.com/smartlogic/BohConf/">the BohConf wiki</a>.
+          Your input will shape this event.</p>
         </div>
         <div class="clear">&nbsp;</div>
       </div>
 
       <h2 id="when_where_h2">When &amp; Where</h2> <p class="back_to_top" href="#">Back to top</p>
 
-      <p>BohConf will be held at the <a href="http://www.bccenter.org" target="_blank">Baltimore Convention Center</a>, June 7 - 9, 2010.</p>
+      <p>BohConf 2010 was held at the <a href="http://www.bccenter.org" target="_blank">Baltimore Convention Center</a>, June 7 - 9, 2010.</p>
 
       <p><strong>CURRENT SESSION:</strong> <a href="http://wiki.github.com/smartlogic/BohConf/community-code-drive">http://wiki.github.com/smartlogic/BohConf/community-code-drive</a> </p>
 
