updated text, be more ambiguous

--- a/public/index.html
+++ b/public/index.html
@@ -41,8 +41,7 @@
     <div id="upcoming_container">
       <a href="http://twitter.com/railsconf/status/27049733980"><img src="/images/railsconf-tweet.png" /></a>
       <div id="upcoming_text_container">
-        <p>It's official! RailsConf will return to Baltimore in 2011. We're not sure what this means for BohConf yet,
-        but regardless, we're excited.</p>
+        <p>It's official! RailsConf will return to Baltimore in 2011.</p>
       </div>
     </div>
 
