--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta name="keywords" contents="Ruby on Rails, RoR, RailsConf, unconf, barcamp, unconference, SmartLogic, Baltimore, Community Code Drive, B'more on Rails, Ignite RailsConf, Stay with a Local, Code Retreat, Programming Contest, Ruby and Art" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="keywords" contents="Ruby on Rails, RoR, RailsConf, unconf, barcamp, unconference, SmartLogic, Baltimore, Community Code Drive, B'more on Rails, Ignite RailsConf, Stay with a Local, Code Retreat, Programming Contest, Ruby and Art">
 <title>BohConf | The Official Unconf of RailsConf 2010</title>
 
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-<link rel="stylesheet" href="/css/reset.css" type="text/css"/>
-<link rel="stylesheet" href="/css/style.css" type="text/css"/>
-<link rel="stylesheet" type="text/css" href="/css/jquery.lightbox-0.5.css" media="screen" />
+<link rel="stylesheet" href="css/reset.css" type="text/css">
+<link rel="stylesheet" href="css/style.css" type="text/css">
+<link rel="stylesheet" type="text/css" href="css/jquery.lightbox-0.5.css" media="screen">
 
 
-<script type="text/javascript" src="/js/jquery-1.4.2.min.js"></script>
-<script type="text/javascript" src="/js/jquery.color.js"></script>
-<script type="text/javascript" src="/js/jquery.lightbox-0.5.js"></script>
-<script type="text/javascript" src="/js/script.js"></script>
+<script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
+<script type="text/javascript" src="js/jquery.color.js"></script>
+<script type="text/javascript" src="js/jquery.lightbox-0.5.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 
 </head>
 
@@ -38,8 +38,8 @@
 
     <h2 id="upcoming_h2">NEWS!</h2>
     <p class="back_to_top" href="#">Back to top</p>
-    <div id="upcoming_container">
-      <a href="http://twitter.com/railsconf/status/27049733980"><img src="/images/railsconf-tweet.png" /></a>
+    <div class="section" id="upcoming_container">
+      <a href="http://twitter.com/railsconf/status/27049733980"><img src="images/railsconf-tweet.png"></a>
       <div id="upcoming_text_container">
         <p>It's official! RailsConf will return to Baltimore in 2011. We're not sure what this means for BohConf yet,
         but regardless, we're excited.</p>
@@ -49,7 +49,7 @@
     <h2 id="about_h2">About BohConf</h2>
     <p class="back_to_top" href="#">Back to top</p>
 
-    <div id="about_container">
+    <div class="section" id="about_container">
       <script type="text/javascript">
         function custommsg() {
           /*
@@ -91,14 +91,14 @@
         <div id="form-container">
           <form action="" method="POST" target="fake-target" onsubmit="this.action='http://spreadsheets.google.com/formResponse?formkey=dE1oZnlsb1JQRkhpQk1nZkR5R3k0LWc6MQ'; custommsg(); return true;">
             <h3>Enter your name and email address to receive news about BohConf!</h3>
-            <input type="text" id="text_field1" class="text_field" name="entry.0.single" value="Enter your name" onfocus="clearField1();" onblur="resetField1();" /><br />
-            <input type="text" id="text_field2" class="text_field" name="entry.1.single" value="Enter your email address" onfocus="clearField2();" onblur="resetField2();" /><br />
-            <input type="submit" id="submit_button" value="Submit" />
+            <input type="text" id="text_field1" class="text_field" name="entry.0.single" value="Enter your name" onfocus="clearField1();" onblur="resetField1();"><br />
+            <input type="text" id="text_field2" class="text_field" name="entry.1.single" value="Enter your email address" onfocus="clearField2();" onblur="resetField2();"><br />
+            <input type="submit" id="submit_button" value="Submit">
           </form>
         </div>
-        <iframe id="fake-target" name="fake-target" style="width:0px; height:0px; border:0px;"></iframe>
+        <iframe id="fake-target" name="fake-target" style="width:0px; height:0px; border:0px; margin:0px"></iframe>
 
-        <div id="about_text_container">
+        <div class="section" id="about_text_container">
           <p><strong>BohConf is the official
           <a href="http://en.oreilly.com/rails2010" target="_blank">RailsConf 2010</a> unconference</strong>.
           At BohConf, we're going to get our hands dirty writing code and
@@ -120,28 +120,28 @@
       </div>
 
       <h2 id="when_where_h2">When &amp; Where</h2> <p class="back_to_top" href="#">Back to top</p>
-
+		<div class="section">
       <p>BohConf 2010 was held at the <a href="http://www.bccenter.org" target="_blank">Baltimore Convention Center</a>, June 7 - 9, 2010.</p>
 
       <p><strong>CURRENT SESSION:</strong> <a href="http://wiki.github.com/smartlogic/BohConf/community-code-drive">http://wiki.github.com/smartlogic/BohConf/community-code-drive</a> </p>
-
+		</div>
       <h2 id="what_is_boh_h2">What is Boh?</h2> <p class="back_to_top" href="#">Back to top</p>
-
+		<div class="section">
       <p>The name BohConf is an homage to the Baltimore institution <a href="http://nationalbohemian.com/" target="_blank">National Bohemian</a> (or Natty Boh).  Every town has their local light beer of choice, and ours is Natty Boh.  Make sure to grab one (or several) when you're in town.</p>
 
       <div class="gallery">
         <ul>
-          <li><a href="http://www.flickr.com/photos/cizauskas/4084079963/" title="Mr Boh by cizauskas, on Flickr"><img src="http://farm3.static.flickr.com/2504/4084079963_c72dcfa0a4.jpg" width="500" height="376" alt="Mr Boh" /> </a> </li>
-          <li><a href="http://www.flickr.com/photos/nifkin/3853314882/" title="Dillon St &amp;amp; S Dean St, Baltimore, MD 21224, United States by MRaichelson, on Flickr"><img src="http://farm4.static.flickr.com/3419/3853314882_09bc9c90ed.jpg" width="500" height="375" alt="Dillon St &amp;amp; S Dean St, Baltimore, MD 21224, United States" /></a></li>
-          <li><a href="http://www.flickr.com/photos/pandabrand/2134539912/" title="Natty Boh by pandabrand, on Flickr"><img src="http://farm3.static.flickr.com/2377/2134539912_9ed64c76fe.jpg" width="500" height="375" alt="Natty Boh" /></a></li>
-          <li><a href="http://www.flickr.com/photos/bcostin/567515119/" title="Stadium Lounge by bcostin, on Flickr"><img src="http://farm2.static.flickr.com/1099/567515119_7bd87d0b19.jpg" width="500" height="317" alt="Stadium Lounge" /></a></li>
-          <li><a href="http://www.flickr.com/photos/scottobear/2292268545/" title="S6301427 by scottobear, on Flickr"><img src="http://farm3.static.flickr.com/2064/2292268545_278d463eb6.jpg" width="500" height="375" alt="S6301427" /></a></li>
-          <li><a href="http://www.flickr.com/photos/pwbaker/2190915842/" title="natty boh by pwbaker, on Flickr"><img src="http://farm3.static.flickr.com/2147/2190915842_3c7fc35a49.jpg" width="500" height="372" alt="natty boh" /></a></li>
+          <li><a href="http://www.flickr.com/photos/cizauskas/4084079963/" title="Mr Boh by cizauskas, on Flickr"><img src="http://farm3.static.flickr.com/2504/4084079963_c72dcfa0a4.jpg" width="500" height="376" alt="Mr Boh"> </a> </li>
+          <li><a href="http://www.flickr.com/photos/nifkin/3853314882/" title="Dillon St &amp;amp; S Dean St, Baltimore, MD 21224, United States by MRaichelson, on Flickr"><img src="http://farm4.static.flickr.com/3419/3853314882_09bc9c90ed.jpg" width="500" height="375" alt="Dillon St &amp;amp; S Dean St, Baltimore, MD 21224, United States"></a></li>
+          <li><a href="http://www.flickr.com/photos/pandabrand/2134539912/" title="Natty Boh by pandabrand, on Flickr"><img src="http://farm3.static.flickr.com/2377/2134539912_9ed64c76fe.jpg" width="500" height="375" alt="Natty Boh"></a></li>
+          <li><a href="http://www.flickr.com/photos/bcostin/567515119/" title="Stadium Lounge by bcostin, on Flickr"><img src="http://farm2.static.flickr.com/1099/567515119_7bd87d0b19.jpg" width="500" height="317" alt="Stadium Lounge"></a></li>
+          <li><a href="http://www.flickr.com/photos/scottobear/2292268545/" title="S6301427 by scottobear, on Flickr"><img src="http://farm3.static.flickr.com/2064/2292268545_278d463eb6.jpg" width="500" height="375" alt="S6301427"></a></li>
+          <li><a href="http://www.flickr.com/photos/pwbaker/2190915842/" title="natty boh by pwbaker, on Flickr"><img src="http://farm3.static.flickr.com/2147/2190915842_3c7fc35a49.jpg" width="500" height="372" alt="natty boh"></a></li>
         </ul>
       </div>
-
+		</div>
       <h2 id="sessions_h2">Sessions</h2> <p class="back_to_top" href="#">Back to top</p>
-
+		<div class="section">
       <h3>Community Code Drive</h3>
       <p>The Community Code Drive is a place to meet and work with the authors of many popular open source projects. Come to help hack on code, find and fix bugs, or just watch a seasoned developer at work. <strong>Check out the <a href="http://wiki.github.com/smartlogic/BohConf/community-code-drive">schedule</a> to see which OSS authors are participating (and feel free to add yourself)!</strong></p>
 
@@ -156,43 +156,43 @@
 
       <h3>Barcamp</h3>
       <p>A Barcamp is a "user generated conference", so there's structure without an agenda. Bring your own questions and your own answers, and we'll hold our own BohCamp.</p>
-
+		</div>
       <h2 id="social_media_h2">Social Media and Related Links</h2>
 
       <p class="back_to_top" href="#">Back to top</p>
 
-      <div id="icon_container">
+      <div class="section" id="icon_container">
         <a href="http://www.twitter.com/bohconf" target="_blank">
-          <img class="media_icons" src="/images/twitter.png" alt="@bohconf on Twitter" title="@bohconf on Twitter" />
+          <img class="media_icons" src="images/twitter.png" alt="@bohconf on Twitter" title="@bohconf on Twitter">
         </a>
 
         <a href="http://www.facebook.com/bohconf" target="_blank">
-          <img class="media_icons" src="/images/facebook.png" alt="BohConf on Facebook" title="BohConf on Facebook" />
+          <img class="media_icons" src="images/facebook.png" alt="BohConf on Facebook" title="BohConf on Facebook">
         </a>
 
         <a href="http://bmoreonrails.org/" target="_blank">
-          <img class="media_icons" src="/images/bmore_on_rails.png" alt="B'more on Rails, Baltimore's Ruby Users Group" title="B'more on Rails, Baltimore's Ruby Users Group" />
+          <img class="media_icons" src="images/bmore_on_rails.png" alt="B'more on Rails, Baltimore's Ruby Users Group" title="B'more on Rails, Baltimore's Ruby Users Group">
         </a>
 
         <a href="http://bmoreonrails.org/stay-with-a-local/" target="_blank">
-          <img class="media_icons" src="/images/stay_with_a_local.png" alt="Stay with a Local created by B'more on Rails" title="Stay with a Local created by B'more on Rails" />
+          <img class="media_icons" src="images/stay_with_a_local.png" alt="Stay with a Local created by B'more on Rails" title="Stay with a Local created by B'more on Rails">
         </a>
 
         <a href="http://igniterailsconf.com" target="_blank">
-          <img class="media_icons" src="/images/ignite_railsconf.jpg" alt="Ignite RailsConf" title="Ignite RailsConf" />
+          <img class="media_icons" src="images/ignite_railsconf.jpg" alt="Ignite RailsConf" title="Ignite RailsConf">
         </a>
       </div>
 
     <hr />
-
+		<div class="section">
         <p id="copyright">&copy; 2010, BohConf is organized by
         <a href="http://www.smartlogicsolutions.com" target="_blank">
-          <img id="smartlogic" src="/images/sls-logo-25.png" alt="SmartLogic Solutions, Baltimore's premier Ruby on Rails consultancy" title="SmartLogic Solutions, Baltimore's premier Ruby on Rails consultancy" />
+          <img id="smartlogic" src="images/sls-logo-25.png" alt="SmartLogic Solutions, Baltimore's premier Ruby on Rails consultancy" title="SmartLogic Solutions, Baltimore's premier Ruby on Rails consultancy">
         </a></p>
         <p id="mobile-toggle">
-          <a href="/m">Mobile</a>
+          <a href="m">Mobile</a>
         </p>
-
+		</div>
     </div>
 
 </div>
