--- a/public/mobile/index.html
+++ b/public/mobile/index.html
@@ -3,22 +3,22 @@
     <head>
         <meta charset="UTF-8" />
         <title>BohConf</title>
-        <style type="text/css" media="screen">@import "mobile/jqtouch/jqtouch.min.css";</style>
-        <style type="text/css" media="screen">@import "mobile/themes/jqt/theme.min.css";</style>
-        <script src="mobile/jqtouch/jquery.1.3.2.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="mobile/jqtouch/jqtouch.min.js" type="application/x-javascript" charset="utf-8"></script>
+        <style type="text/css" media="screen">@import "jqtouch/jqtouch.min.css";</style>
+        <style type="text/css" media="screen">@import "themes/jqt/theme.min.css";</style>
+        <script src="jqtouch/jquery.1.3.2.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="jqtouch/jqtouch.min.js" type="application/x-javascript" charset="utf-8"></script>
         <script type="text/javascript" charset="utf-8">
             var jQT = new $.jQTouch({
-                icon: '/mobile/bohconf-icon.png',
+                icon: 'bohconf-icon.png',
                 statusBar: 'black',
 
                 preloadImages: [
-                    'mobile/themes/jqt/img/button.png',
-                    'mobile/themes/jqt/img/back_button.png',
-                    'mobile/themes/jqt/img/back_button_clicked.png',
-                    'mobile/themes/jqt/img/toolbar.png',
-                    'mobile/themes/jqt/img/chevron.png',
-                    'mobile/sls-logo-16.png'
+                    '"themes/jqt/img/button.png',
+                    '"themes/jqt/img/back_button.png',
+                    '"themes/jqt/img/back_button_clicked.png',
+                    '"themes/jqt/img/toolbar.png',
+                    '"themes/jqt/img/chevron.png',
+                    '"sls-logo-16.png'
                 ]
             });
             // Some sample Javascript functions:
@@ -100,7 +100,7 @@
               <li class="arrow"><a href="/force_desktop" target="_webapp">View Full Site</a></li>
             </ul>
             <div class="footer">
-                &copy; 2010, BohConf is organized by <img id="sls-logo" src="/mobile/sls-logo-16.png" alt="SmartLogic"/>
+                &copy; 2010, BohConf is organized by <img id="sls-logo" src="sls-logo-16.png" alt="SmartLogic"/>
             </div>
         </div>
         <div id="about-bohconf">
@@ -113,7 +113,7 @@
               <p>You can track updates and developments by following us on <a href="http://twitter.com/bohconf">Twitter</a> and by contributing to <a href="http://wiki.github.com/smartlogic/BohConf/">the BohConf wiki</a>. Your input will shape this event.</p>
             </div>
             <div class="footer">
-                &copy; 2010, BohConf is organized by <img id="sls-logo" src="/mobile/sls-logo-16.png" alt="SmartLogic"/>
+                &copy; 2010, BohConf is organized by <img id="sls-logo" src="sls-logo-16.png" alt="SmartLogic"/>
             </div>
         </div>
         <div id="when-where">
@@ -125,7 +125,7 @@
               <p>BohConf will be held at the <a href="http://www.bccenter.org" target="_blank">Baltimore Convention Center</a>, June 7 - 9, 2010.</p>
             </div>
             <div class="footer">
-                &copy; 2010, BohConf is organized by <img id="sls-logo" src="/mobile/sls-logo-16.png" alt="SmartLogic"/>
+                &copy; 2010, BohConf is organized by <img id="sls-logo" src="sls-logo-16.png" alt="SmartLogic"/>
             </div>
         </div>
         <div id="what-is-boh">
@@ -137,7 +137,7 @@
             <p>The name BohConf is an homage to the Baltimore institution <a href="http://nationalbohemian.com/" target="_blank">National Bohemian</a> (or Natty Boh).  Every town has their local light beer of choice, and ours is Natty Boh.  Make sure to grab one (or several) when you're in town.</p>
           </div>
           <div class="footer">
-              &copy; 2010, BohConf is organized by <img id="sls-logo" src="/mobile/sls-logo-16.png" alt="SmartLogic"/>
+              &copy; 2010, BohConf is organized by <img id="sls-logo" src="sls-logo-16.png" alt="SmartLogic"/>
           </div>          
         </div>
         <div id="sessions">
@@ -160,7 +160,7 @@
               </div>
             </div>
             <div class="footer">
-                &copy; 2010, BohConf is organized by <img id="sls-logo" src="/mobile/sls-logo-16.png" alt="SmartLogic"/>
+                &copy; 2010, BohConf is organized by <img id="sls-logo" src="sls-logo-16.png" alt="SmartLogic"/>
             </div>
         </div>
     </body>
