Updated event listings

--- a/public/index.html
+++ b/public/index.html
@@ -192,14 +192,17 @@
       	<h3>Barcamp</h3>
       	<p>A Barcamp is a "user generated conference", so there's structure without an agenda. Bring your own questions and your own answers, and we'll hold our own BohCamp.</p>
 		
-      	<h3>Ruby and Art</h3>
-      	<p>Do you like ruby? Do you like art? Do you like taking two things that you like, and then sticking them together to make a bigger thing you like even more? We'll be experimenting with visual art, music, games, and of course, Ruby!</p>
+      	<h3>Open Government Hackathon</h3>
+      	<p><a href="http://sunlightfoundation.com/people/lmontanez/">Luigi Montanez of Sunlight Foundation</a> will be organizing and running an Open Government Hackathon.  Bring your laptop and be prepared to work on some open government datasets!</p>
 
-    	<h3>Code Retreat</h3>
-      	<p>Code. Rinse. Repeat. As professional developers we're often coding for profit and rarely coding for practice. In a Code Retreat we'll sharpen our coding skills with a set of exercises done in pairs, and we'll start fresh every time.</p>
+      	<h3>JRuby Code Drive</h3>
+      	<p>EngineYard's team of JRuby experts will be hosting a code drive on best practices for JRuby development.  All people are welcome - regardless of your level of experience with JRuby.</p>
 
-      	<h3>Programming Contest</h3>
-      	<p>Come flex your coding muscles with a data visualization challenge! We'll unveil a dataset and give participants 24 hours to do whatever they want with it. It doesn't have to be rails (or even a website) but it does have to be cool! Prizes will include a $100 gift card, an assortment of O'Reilly books, and BohConf T-Shirts.</p>
+    	<h3>Guided Exploration</h3>
+      	<p>Guided exploration sessions will last approximately 2 hours and will feature an expert in a given technology providing instruction on that technology.  More details TBD.</p>
+
+      	<h3>KidsRuby</h3>
+      	<p>Ron Evans (<a href="http://twitter.com/deadprogram">@deadprogram</a>) will be running a session for <a href="http://kidsruby.com/">KidsRuby</a>.  Many students from Baltimore's own <a href="https://www.baltimorecityschools.org/416/site/default.asp">Digital Harbor High School</a> will be in attendance and we DO need volunteers.  To sign up as a volunteer please complete <a href="https://spreadsheets.google.com/viewform?formkey=dGRoRlkwU3Rma25ESEZ5OGdtUDFvY3c6MQ">the volunteer sign up form</a>.  To sign up as an attendee please complete <a href="https://spreadsheets.google.com/viewform?formkey=dGM2ZUU4SkI0cHFtM3JkVXpZZDhzMGc6MQ">the attendee sign up form</a>.  Note that your kids are indeed more than welcome at this program!</p>
 
 	</div>
       
