Added BlueBox logo, added favicon

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,6 @@
 <meta name="keywords" content="Ruby on Rails, RoR, RailsConf, unconf, barcamp, unconference, SmartLogic, Baltimore, Community Code Drive, B'more on Rails, Ignite RailsConf, Stay with a Local, Code Retreat, Programming Contest, Ruby and Art" />
 <title>BohConf | The Official Unconf of RailsConf</title>
 
-<link rel="icon" href="favicon.ico" type="image/x-icon" />
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-
 <link rel="stylesheet" href="css/reset.css" type="text/css" />
 <link rel="stylesheet" href="css/style.css" type="text/css" />
 <link rel="stylesheet" href="css/jquery.lightbox-0.5.css" type="text/css" media="screen" />
@@ -17,6 +14,9 @@
 <script type="text/javascript" src="js/jquery.color.js"></script>
 <script type="text/javascript" src="js/jquery.lightbox-0.5.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
+
+<link rel="icon" href="favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
 </head>
 
@@ -196,7 +196,7 @@
       	<p><a href="http://sunlightfoundation.com/people/lmontanez/">Luigi Montanez of Sunlight Foundation</a> will be organizing and running an Open Government Hackathon.  Bring your laptop and be prepared to work on some open government datasets!</p>
 
       	<h3>JRuby Code Drive</h3>
-      	<p>EngineYard's team of JRuby experts will be hosting a code drive on best practices for JRuby development.  All people are welcome - regardless of your level of experience with JRuby.</p>
+      	<p>Engine Yard's team of JRuby experts will be hosting a code drive on best practices for JRuby development.  All people are welcome - regardless of your level of experience with JRuby.</p>
 
     	<h3>Guided Exploration</h3>
       	<p>Guided exploration sessions will last approximately 2 hours and will feature an expert in a given technology providing instruction on that technology.  More details TBD.</p>
@@ -240,7 +240,7 @@
 
 <!-- SOCIAL MEDIA -->
 	  
-	<h2 id="social_media_h2">Social Media and Related Links</h2><a class="back_to_top" href="#">Back to top</a>
+	<h2 id="social_media_h2">Social Media &amp; Related Links</h2><a class="back_to_top" href="#">Back to top</a>
 	<div class="section" id="icon_container">
     	<a href="http://www.twitter.com/bohconf" target="_blank">
           	<img class="media_icons" src="images/twitter.png" alt="@bohconf on Twitter" title="@bohconf on Twitter" />
@@ -260,6 +260,10 @@
 
         <a href="http://igniterailsconf.com" target="_blank">
           	<img class="media_icons" src="images/ignite_railsconf.jpg" alt="Ignite RailsConf" title="Ignite RailsConf" />
+        </a>
+		
+		<a href="http://www.bluebox.net" target="_blank">
+          	<img class="media_icons" src="images/blue_box.jpg" alt="Blue Box Group" title="Blue Box Group" />
         </a>
 		
   	</div>
