styled fixed info box, fixed broken h2 link

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 	
 	<div id="important-stuff">
 		<a href="http://wiki.bohconf.com/">The schedule is on the wiki!</a><br/><br/>
-		Questions?  <a href="mailto:bohconf@smartlogicsolutions.com">Email us</a> or <a href="http://twitter.com/bohconf">tweet us</a>!
+		Questions?<br /><a href="mailto:bohconf@smartlogicsolutions.com">Email us</a> or <a href="http://twitter.com/bohconf">tweet us</a>!
 	</div>
 	
 <!-- EMAIL SUBMISSION FORM -->	
