Initial copy for index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width: 670px)">
     <title>BohConf 2013 | Baltimore</title>
-    <meta name="description" content="BohConf 2013 hosted in Baltimore, Maryland. Best practices for developing and designing web and mobile applications using Ruby on Rails, iOS, Android, UX, UI, HTML, CSS, Javascript, and related technologies.">
+    <meta name="description" content="BohConf 2013 is hosted in Baltimore, Maryland. Learn best practices for developing and designing web and mobile applications using Ruby on Rails, iOS, Android, UX, UI, HTML, CSS, Javascript, and related technologies.">
     <meta charset="utf-8">
   </head>
 
@@ -24,16 +24,50 @@
     </header>
 
     <article id="about">
+      <h2>About</h2>
+
+      <p>BohConf is a 1-day, multi-track, unconf-inspired conference dedicated to learning about
+        the latest technologies and practices in the web and mobile design/development world.</p>
+
+      <p>Professionals and enthusiasts of all backgrounds are encouraged to attend, participate,
+        and most importantly&mdash;get engaged.</p>
+
+      <p>In supporting this mission BohConf is inexpensive and accessible to everyone.</p>
+
+      <p>Follow <a href="https://twitter.com/bohconf">@bohconf</a> for the latest news.</p>
     </article>
 
     <article id="venue">
+      <h2>Venue</h2>
+
+      <p>BohConf will take place in the Mt Vernon neighborhood of Baltimore at
+        1030 N Charles St, Baltimore, MD 21201.</p>
+
+      <p>There are hotels in the area but we encourage you to <a href="#">stay for free with
+        some locals</a>.</p>
+
+      <p>Street parking is available in the neighborhood.  You can also take the Circulator
+        and other means of public transportation.</p>
     </article>
 
     <article id="schedule">
+      <h2>Schedule</h2>
+
+      <p>Thursday 5/30/13 from 6pm - 9pm: Ignite BohConf &amp; opening party.</p>
+      <p>Friday 5/31/13 from 8:30am - 5pm: multi-track conference.</p>
+      <p>Friday 5/31/13 from 5pm - 7pm: happy hour &amp; closing party.</p>
     </article>
 
     <article id="sponsors">
+      <h2>Sponsors</h2>
+
+      <p>Thank you for the generous support of all of our sponsors.  Blah blah blah.</p>
     </article>
+
+    <footer>
+      All content released under some Creative Commons or whatever license.  View
+      <a href="#">BohConf themes from previous years</a>.
+    </footer>
   
   </body>
 </html>
